Configured my APIs