@@ -13,6 +13,7 @@ import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import java.util.List;
+import java.util.Arrays;
 
 @Configuration
 @EnableWebSecurity
@@ -26,7 +27,13 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration config = new CorsConfiguration();
-        config.setAllowedOrigins(List.of("http://localhost:5173"));
+        // Allow frontend origin(s) from environment variable FRONTEND_URL (comma-separated),
+        // otherwise default to localhost for local development.
+        String frontendEnv = System.getenv("FRONTEND_URL");
+        List<String> allowedOrigins = (frontendEnv != null && !frontendEnv.isBlank())
+            ? Arrays.asList(frontendEnv.split(","))
+            : List.of("http://localhost:5173");
+        config.setAllowedOrigins(allowedOrigins);
         config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
         config.setAllowedHeaders(List.of("*"));
         config.setAllowCredentials(true);
